<resources>
    <string name="app_name">Mashaweer</string>

<string name="google_maps_api_key">AIzaSyDFP-4aWCs41Fll8m8ZQoYpbvP522ASw98</string>

    content_copy

    //home
    <string name="home_diver">سائق</string>
    <string name="home_user">راكب</string>
    //redgister_user
    <string name="main_text">تسجيل حساب جديد</string>
    <string name="add_photo">اضافة صوره</string>
    <string name="register">تسجيل</string>
    //log in user
    <string name="log_in">تسجيل دخول</string>
    <string name="or">او</string>
    <string name="resetpassword">هل نسيت كلمة المرور</string>

    //rsest pass
    <string name="send_pass_to_email">ارسال</string>
    //main user
    <string name="car_spinner">نوع السياره</string>
    <string name="face_spinner">مكان الذهاب</string>
    <string name="btn_show_driver">عرض النتائج</string>
    //list item driver
    <string name="btn_show_driver_details">عرض معلومات السائق</string>
    <string name="driver_name">اسم السائق   :</string>
    <string name="car_model">موديل السياره:</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logInDriver">تسجيل دخول السائقين</string>
    <string name="LogInClients">تسجيل دخول</string>
    <string name="Logout">خروج</string>
    <string name="callus">اتصل ينا</string>
    <string name="about">عن التطبيق</string>
    <string name="privacy">سياسة الخصوصيه </string>
    <string name="share">مشاركه </string>
    <string name="problems">للشكاوى </string>

    <string name="AlreadyRememeber">بالفعل تملك حساب قم بتسجيل الدخول </string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    ////////////////////////////////////////////////////
    <string name="validate_">Validate!</string>
    <string name="explanation_numeric">The numeric field allows only numbers on it. The previous edittext was intentionally configured to accept any kind of input so that you can test the validation.</string>
    <string name="explanation_alpha">The alpha field will check if the field contains only standard letters.</string>
    <string name="explanation_personname">This field will check for valid person name OR surname</string>
    <string name="explanation_personfullname">This field will check for valid person name AND surname</string>

    <string name="hint_date"><![CDATA[2013-07-11 or 11:23]]></string>
    <string name="explanation_date">This field will check date/datetime</string>

    <string name="hint_date_custom"><![CDATA[2013-07-11]]></string>
    <string name="explanation_date_custom">This field will check yyyy-MM-dd</string>

    <string name="hint_email">me@andreabaccega.com</string>
    <string name="explanation_email">The email field will only accept valid email input.\nNote that this will only perform a regular expression check</string>

    <string name="hint_creditcard">444433332222111</string>
    <string name="explanation_creditcard">The credit card field will only accept valid credit card numbers. The validation is performed through the Luhn Algorithm</string>

    <string name="hint_phone">+41 01 12345678</string>
    <string name="explanation_phone">The phone number will be validated using regexps It will allow several formats.\n\t- +00 01 23456799\n\t- 0123456789</string>

    <string name="hint_domainname">andreabaccega.com</string>
    <string name="explanation_domainname">The domainname check will be performed using regexps.</string>

    <string name="hint_ipaddress">127.0.0.1</string>
    <string name="explanation_ipaddress">The ip address check will be performed using regexps.</string>

    <string name="hint_weburl">http://www.andreabaccega.com/blog/</string>
    <string name="explanation_weburl">The check will be performed using regexps only.</string>

    <string name="hint_nocheck">&#8230;</string>
    <string name="explanation_nocheck">the nocheck test will always pass the test ( useful only if you want to check that the field is not empty)</string>

    <string name="explanation_phone_custommmessages">This is a regular phone check ( like the previous one ).\nThe only difference is that here we\'ve a custom message for the empty case and the invalid case. Try it out!</string>
    <string name="custom_test_error_phone">Custom test error message!</string>
    <string name="custom_empty_error_phone">Custom empty error message!</string>

    <string name="explanation_allow_empty">This fields validates a phone when the postUser enters something. If the postUser doesn\'t enter any data the EditText will validate!</string>

    <string name="hint_regexp">aa</string>
    <string name="custom_error_regexp">This field only validates with 2 or more "a"</string>
    <string name="explanation_regexp">The field validates only if the field content matches the regexp given in the xml. The current regexp is: /^[a]{2,}$/\nNote that the regexp is case sensitive so that the field won\'t validate if you enter "AA"</string>

    <string name="hint_programmatic">ciao</string>
    <string name="error_programmatic">You should enter \'ciao\' here</string>
    <string name="explanation_programatic">The current check is performed by a programmatically added validator. Check out the source code.</string>
    <string name="programmatic_title">Programmatically added validator</string>

    <string name="emailorcredit_title">Email OR Credit</string>
    <string name="hint_emailorcredit">your email or creditcard number</string>
    <string name="explanation_emailorcredit">The previous field will validate only if it is not empty and one of the following is true:\n- it is a valid email address.\n- it is a valid credit card</string>

    <string name="full_name">Full Name</string>
    <string name="full_name_hint">eg Fred Bloggs</string>
    <string name="address_label">Address</string>
    <string name="address_hint">House number, Street, Suburb, Postcode</string>
    <string name="phone_number_label">Phone number</string>
    <string name="phone_number_hint">Your phone number</string>
    <string name="email_hint">email@address.com</string>
    <string name="email_label">Email</string>
    <string name="invalid_phoneno_message">The entered phone number is invalid</string>
    <string name="invalid_fullname_message">Full name is invalid (must be at least 2 space separated names)</string>
    <string name="required_phoneno_message">A contact number is required</string>
    <string name="required_fullname_message">A full name is required</string>
    <string name="invalid_email_message">Provided e-mail address is invalid</string>

    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>


    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="read_file">This app needs access to your file storage so that it can read photos.</string>
</resources>
