<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="5dp"
    android:background="@color/white">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="3dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0.2dp"
                            android:background="#D84315"
                            android:orientation="vertical"
                            tools:ignore="Suspicious0dp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageCarKind"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:padding="2dp"
                            android:src="@mipmap/ic_launcher_foreground"
                            />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:gravity="end"
                                android:layout_gravity="end">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:padding="2dp"
                                    android:gravity="center"
                                    android:layout_weight="1"
                                    android:layout_marginTop="2dp">
                                    <TextView
                                        android:id="@+id/ShName"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="driver_name"
                                        android:textColor="@color/primary"
                                        android:textSize="14dp" />
                                    <View
                                        android:layout_width="10dp"
                                        android:layout_height="match_parent">

                                    </View>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/driver_name"
                                    android:textColor="@color/primary_darker"
                                    android:textSize="14dp" />


                             </LinearLayout>
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:padding="2dp"
                                    android:gravity="center"
                                    android:layout_weight="1"
                                    android:layout_marginBottom="2dp">

                                    <TextView
                                        android:id="@+id/model_car"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="model_car"
                                        android:textColor="@color/primary"
                                        android:textSize="14dp" />

                                    <View
                                        android:layout_width="10dp"
                                        android:layout_height="match_parent">

                                    </View>
                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/car_model"
                                        android:textColor="@color/primary_darker"
                                        android:textSize="14dp" />


                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>

                         <Button
                             android:id="@+id/riverDetails"
                           android:layout_width="150dp"
                           android:layout_height="wrap_content"
                             android:padding="10sp"
                             android:textColor="@color/white"
                           android:background="@drawable/bg_rectangle_textview"
                           android:text="@string/btn_show_driver_details"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0.2dp"
                            android:layout_marginTop="5dp"
                            android:background="#D84315"
                            android:orientation="vertical" />


                    </LinearLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>